# QozeCode

./: .gitignore  LICENSE  Qoze.spec  README.md  completion_handler.py  config_manager.py  constant.py  dynamic_commands_patch.py  enums.py  input_handler.py  input_processor.py  install.ps1  install.sh  launcher.py  markdown_test.py  mcp_config.template.json  model_initializer.py  pyproject.toml  qoze.conf.template  qoze.spec  qoze_code_agent.py  qoze_skills.py  qoze_tui.py  shared_console.py  skills_tui_integration.py  stream_output.py  test.py  test2.py  test_sse_mcp.py  zhipu_test.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_issue.yml
.qoze/skills/pdf-to-report/: analyze_pdf_tool.py
bak/: qoze_tui.py
deepagent/: 01_basic_agent.py  02_research_agent.py  03_filesystem_agent.py  04_subagent_demo.py  05_full_featured.py  06_bank_agent.py
docs/: qozeisland-requirements.md  qozeisland-tech-design.md
macos/: build_island.sh  com.qoze.code.plist  install_launch_agent.sh  uninstall_island.sh
macos/QozeCode/: Info.plist
macos/QozeCode/Sources/: DebugLog.swift  QozeCodeApp.swift  SessionStore.swift  TokenUsageStore.swift
macos/QozeCode/Sources/Server/: IslandServer.swift  Messages.swift
macos/QozeCode/Sources/Services/: FocusService.swift  NewSessionService.swift  NotificationService.swift
macos/QozeCode/Sources/UI/: MenuBarIcon.swift  PopoverView.swift  StateIconRenderer.swift  TokenUsageView.swift
mcp_mgr/: __init__.py  mcp_manager.py
plan/: plan_manager.py
qoze_mcp/: __init__.py  mcp_client.py  mcp_manager.py
scripts/: install.sh
skills/: skill_manager.py  skills_tui_integration.py
tools/: asr_tool.py  browser_tool.py  browser_tools.py  code_tools.py  common_tools.py  execute_command_tool.py  file_operations_tools.py  file_tools.py  lark_tools.py  math_tools.py  mcp_tools.py  plan_tools.py  search_tool.py  skill_tools.py  subagent_tool.py  tavily_search_tool.py
tui_components/: __init__.py  pixel_logo.py  request_indicator.py  sidebar.py  status_bar.py  terminal_compat.py  top_bar.py  tui_constants.py  tui_stream_output.py  tui_stream_output_optimized.py
tui_components/messages/: __init__.py  auto_copy_widgets.py  bot_widget.py  message_list.py  stream_handler.py  subagent_widget.py  thinking_widget.py  tool_status_panel.py  tool_widget.py  types.py  user_widget.py
utils/: audio_manager.py  audio_transcriber.py  checkpoint_manager.py  command_exec.py  constants.py  directory_config.py  directory_tree.py  git_context.py  island_reporter.py  iterm_driver.py  mcp_manager.py  meeting_note_recorder.py  skill_manager.py  skills_cli.py  system_prompt.py  token_usage.py
