[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qoze-code"
version = "0.1.0"
description = "QozeCode Agent CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "QozeCode" }]

dependencies = [
    "rich>=14.1.0",
    "inquirer>=3.4.0",
    "langchain-core>=0.3.76",
    "langgraph>=1.0.0a3",
    "typing_extensions>=4.15.0",
    "langchain-deepseek>=0.1.4",
    "langchain-google-vertexai",
    "langchain-aws>=0.2.33",
    "langchain-openai>=0.3.33",
    "langchain-qwq>=0.2.1",
    "boto3>=1.40.40",
    "httpx[socks]>=0.28.1",
    "tavily-python>=0.7.12",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.2",
    "langchain-community>=0.3.30",
    "pyjwt>=2.10.1",
    "playwright>=1.55.0",
    "prompt_toolkit>=3.0.52",
    "halo"
]
#  langchain-google-vertexai
[project.scripts]
qoze = "launcher:main"

[tool.setuptools]
py-modules = ["launcher", "qoze_code_agent", "model_initializer", "shared_console", "config_manager", "constant", "input_handler", "completion_handler"]
packages = ["tools", "utils"]

[project.optional-dependencies]
browser = ["playwright", "nest_asyncio"]