[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qoze-code"
version = "0.1.0"
description = "QozeCode Agent CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "QozeCode" }]

dependencies = [
    "rich>=14.1.0",
    "inquirer>=3.4.0",
    "langgraph",
    "typing_extensions>=4.15.0",
    "langchain-core",
    "langchain-deepseek",
    "langchain-google-vertexai",
    "langchain-aws",
    "langchain-community",
    "langchain-openai",
    "langchain-qwq",
    "boto3",
    "httpx[socks]>=0.28.1",
    "tavily-python>=0.7.12",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.2",
    "pyjwt>=2.10.1",
    #    "playwright>=1.55.0",
    "prompt_toolkit>=3.0.52",
    "google-auth",
    "colorama",
    "python-crontab",
    "hnswlib",
    "textual"
]
#  langchain-google-vertexai
[project.scripts]
qoze = "qoze_tui:main"

[tool.setuptools]
py-modules = ["qoze_tui", "launcher", "qoze_code_agent", "model_initializer", "shared_console", "config_manager", "constant", "input_handler", "completion_handler", "stream_output", "input_processor"]
packages = ["tools", "utils"]

[project.optional-dependencies]
browser = ["playwright", "nest_asyncio"]