[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qoze-code"
version = "0.1.0"
description = "QozeCode Agent CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QozeCode" }]

dependencies = [
    "rich>=14.1.0",
    "inquirer>=3.4.0",
    "langgraph",
    "typing_extensions>=4.15.0",
    "langchain-core",
    "langchain-deepseek",
    "langchain-google-genai",
    "langchain-aws",
    "langchain-xai",
    "langchain-community",
    "langchain-openai",
    "langchain-qwq",
    "boto3",
    "httpx[socks]>=0.28.1",
    "tavily-python>=0.7.12",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.2",
    "pyjwt>=2.10.1",
    "prompt_toolkit>=3.0.52",
    "google-auth",
    "cryptography>=38.0.3,<47",
    "colorama",
    "python-crontab",
    "textual",
    "jinja2",
    "soniox",
    "python-socks[asyncio]",
    "html2text",
    # macOS only: pyaudio    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "langgraph-checkpoint-sqlite"
]

[project.scripts]
qoze = "qoze_tui:main"

[tool.setuptools]
py-modules = ["qoze_tui", "launcher", "enums", "qoze_code_agent", "model_initializer", "shared_console", "config_manager", "constant", "dynamic_commands_patch"]
packages = ["tools", "utils", "skills", "tui_components", "qoze_mcp"]

[project.optional-dependencies]
macos = ["pyaudio"]
